wiring up test functionality to ant and have one basic test to ensure everything works correctly

--- a/build.xml
+++ b/build.xml
@@ -6,17 +6,32 @@
     <property name="src" location="src"/>
     <property name="build" location="build"/>
     <property name="dist"  location="dist"/>
+    <property name="test" location="test" />
+    <property name="junit" location="lib/junit-4.11.jar" />
+
+    <path id="classpath.test">
+        <pathelement location="${junit}" />
+        <pathelement location="${test}" />
+        <pathelement location="${build}/test" />
+    </path>
 
     <target name="init">
         <!-- Create the time stamp -->
         <tstamp/>
+
         <!-- Create the build directory structure used by compile -->
         <mkdir dir="${build}"/>
+        <mkdir dir="${build}/test" />
     </target>
 
     <target name="compile" depends="init" description="compile the source " >
         <!-- Compile the java code from ${src} into ${build} -->
         <javac srcdir="${src}" destdir="${build}"/>
+        <javac srcdir="${test}" destdir="${build}/test">
+            <classpath>
+                <pathelement location="${junit}" />
+            </classpath>
+        </javac>
     </target>
 
     <target name="dist" depends="compile" description="generate the distribution" >
@@ -28,11 +43,18 @@
     </target>
 
     <target name="test">
-        <!-- just do nothing for now until travis is building properly -->
+        <junit haltonfailure="true">
+            <classpath refid="classpath.test" />
+            <batchtest fork="yes" todir="test">
+                <formatter type="brief" usefile="false" />
+                <fileset dir="${test}">
+                    <include name="**/*Test*.java" />
+                </fileset>
+            </batchtest>
+        </junit>
     </target>
 
-    <target name="clean"
-            description="clean up" >
+    <target name="clean" description="clean up" >
         <!-- Delete the ${build} and ${dist} directory trees -->
         <delete dir="${build}"/>
         <delete dir="${dist}"/>
