trying to get tests to run successfully

--- a/build.xml
+++ b/build.xml
@@ -52,12 +52,7 @@
         </javac>
     </target>
 
-    <target name="dist" depends="compile" description="generate the distribution" >
-        <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
-        <jar jarfile="${dist}/lib/JukeAlert-${DSTAMP}.jar" basedir="${build}"/>
-    </target>
-
-    <target name="test">
+    <target name="test" depends="compile">
         <junit fork="yes" haltonfailure="true">
             <classpath refid="classpath.test" />
             <batchtest fork="yes" todir="test">
@@ -67,6 +62,11 @@
                 </fileset>
             </batchtest>
         </junit>
+    </target>
+
+    <target name="dist" depends="test" description="generate the distribution" >
+        <!-- Put everything in ${build} into the MyProject-${DSTAMP}.jar file -->
+        <jar jarfile="${dist}/lib/JukeAlert-${DSTAMP}.jar" basedir="${build}"/>
     </target>
 
     <target name="clean" description="clean up" >
